Fixed scrollbar issue

--- a/src/app/applications/view-application/view-application.component.scss
+++ b/src/app/applications/view-application/view-application.component.scss
@@ -113,3 +113,7 @@
 .mat-tab-body-wrapper{
     margin-top: 25px;
 }
+
+.mat-tab-body-content{
+    overflow: hidden!important;
+}
